--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "concurrently": "^6.2.0",
+    "config": "^3.3.6",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "is-empty": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
